Protobuf Format Support for Kafka Connector

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -54,6 +54,7 @@ sidebar:
     title: "Connectors"
     pages:
       - "api-reference/connectors/avro"
+      - "api-reference/connectors/protobuf"
       - "api-reference/connectors/bigquery"
       - "api-reference/connectors/deltalake"
       - "api-reference/connectors/hudi"
