--- a/.github/workflows/link-validation.yml
+++ b/.github/workflows/link-validation.yml
@@ -37,5 +37,6 @@ jobs:
 
       - name: Set environment variable and build
         run: |
+          cd turbo
           export MODE=EDIT
           pnpm run build --filter=docs...
