Fixing install steps in github action

--- a/.github/workflows/link-validation.yml
+++ b/.github/workflows/link-validation.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           cd turbo
           export MODE=EDIT
-          pnpm run build
+          pnpm run dev --filter=docs...
