--- a/.github/workflows/link-validation.yml
+++ b/.github/workflows/link-validation.yml
@@ -30,13 +30,17 @@ jobs:
           npm i -g pnpm
           npm i -g turbo
 
+      - name: Clear pnpm store
+        run: pnpm store prune
+      
       - name: Install dependencies
         run: |
           cd turbo
-          pnpm install
+          pnpm install --frozen-lockfile
 
       - name: Set environment variable and build
+        env:
+          MODE: EDIT
         run: |
           cd turbo/apps/docs
-          export MODE=EDIT
           pnpm run build
