Fixing install steps in github action

--- a/.github/workflows/link-validation.yml
+++ b/.github/workflows/link-validation.yml
@@ -31,19 +31,6 @@ jobs:
           version: 8
           run_install: false
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v4
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
       - name: Install dependencies
         run: |
           cd turbo
@@ -52,6 +39,7 @@ jobs:
       - name: Set environment variable and build
         env:
           MODE: EDIT
+          NODE_PATH: turbo/apps/docs/node_modules
         run: |
           cd turbo/apps/docs
           NODE_OPTIONS="--trace-warnings" pnpm run build
