Fixing install steps in github action

--- a/.github/workflows/link-validation.yml
+++ b/.github/workflows/link-validation.yml
@@ -37,9 +37,7 @@ jobs:
           pnpm install --frozen-lockfile --reporter=ndjson
 
       - name: Set environment variable and build
-        env:
-          MODE: EDIT
         run: |
           cd turbo
-          pnpm turbo run build --filter docs
+          MODE=EDIT pnpm turbo run build --filter docs
           
