--- a/.github/workflows/link-validation.yml
+++ b/.github/workflows/link-validation.yml
@@ -37,7 +37,9 @@ jobs:
           pnpm install --frozen-lockfile --reporter=ndjson
 
       - name: Set environment variable and build
+        env:
+          MODE: "EDIT"
         run: |
           cd turbo
-          MODE='"EDIT"' pnpm turbo run build --filter docs
+          pnpm turbo run build --filter docs
           
