changing docker compose config to incorporate changelog builds

--- a/changelog/docker-compose.yml
+++ b/changelog/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services: 
   preview: 
-    build: "https://${GITHUB_TOKEN}:@github.com/${GITHUB_REPO}.git#rk-changelog-pro/changelog"
+    build: 
+      context: "https://${GITHUB_TOKEN}:@github.com/${GITHUB_REPO}.git#rk-changelog-pro"
+      dockerfile: apps/web/Dockerfile
     ports:
       - 3000:3000
     volumes: 
@@ -10,3 +12,4 @@ services:
     environment:
       - MODE=EDIT
       - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - DOCS_URL=http://localhost:3001
