--- a/.github/workflows/test_linux.yml
+++ b/.github/workflows/test_linux.yml
@@ -23,9 +23,15 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     name: Unit tests with py-version ${{ matrix.python-version }}
     steps:
+      - name: Test GITHUB_TOKEN permissions
+        run: |
+          curl -H "Authorization: token ${{ secrets.SERVER_CHECKOUT }}" https://api.github.com/repos/fennel-ai/server/contents/
+
       #----------------------------------------------
       #       check-out repo and set-up python
       #----------------------------------------------
@@ -36,6 +42,27 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      #----------------------------------------------
+      #       check-out server repo
+      #----------------------------------------------
+      - name: Check out server repository (Rust)
+        uses: actions/checkout@v2
+        with:
+          repository: 'fennel-ai/server'
+          token: ${{ secrets.SERVER_CHECKOUT }}  
+          path: 'server'
+          ref: 'main'  
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          default: true
+
+      - name: Install protobuf compiler (protoc)
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
       #----------------------------------------------
       #  -----  install & configure poetry  -----
       #----------------------------------------------
@@ -59,6 +86,17 @@ jobs:
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
+
+    #----------------------------------------------
+      #       install maturin 
+      #----------------------------------------------     
+      - name: Install maturin
+        run: python -m pip install maturin
+
+      - name: Build and link the package using Maturin Develop
+        run: maturin develop --release --manifest-path ./server/fennel_data_lib/Cargo.toml
+
+
       #----------------------------------------------
       # install your root project, if required
       #----------------------------------------------
@@ -69,5 +107,6 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          poetry run pytest . --run_slow
+          poetry run pytest fennel --run_slow
+          poetry run pytest docs
           poetry run python -m unittest discover fennel
