--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "1.5.1"
+version = "1.5.2"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
@@ -20,7 +20,7 @@ pytest = "7.1.3"
 pytest-rerunfailures = "^13.0"
 sortedcontainers = "^2.4.0"
 typing-extensions = "^4.12.0"
-fennel_data_lib = "^0.1.2"
+fennel-data-lib = "0.1.8"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
