--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "1.5.17"
+version = "1.5.18"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
@@ -20,7 +20,7 @@ pytest = "7.1.3"
 pytest-rerunfailures = "^13.0"
 sortedcontainers = "^2.4.0"
 typing-extensions = "^4.12.0"
-fennel-data-lib = "0.1.15"
+fennel-data-lib = "0.1.16"
 pyarrow = "^14.0.2"
 
 [tool.poetry.dev-dependencies]
@@ -43,20 +43,20 @@ pyyaml = "^6.0.1"
 
 # For production, we use poetry to build the python package
 
-# [build-system]
-# requires = ["poetry-core>=1.0.0"]
-# build-backend = "poetry.core.masonry.api"
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 # For local development, we use maturin to build the rust library
 
-[build-system]
-requires = ["maturin", "setuptools>=42", "wheel"]
-build-backend = "maturin"
+# [build-system]
+# requires = ["maturin", "setuptools>=42", "wheel"]
+# build-backend = "maturin"
 
-[tool.maturin]
-name = "fennel_data_lib"
-sdist-directory = "python_package"
-manifest-path = "../server/fennel_data_lib/Cargo.toml"
+# [tool.maturin]
+# name = "fennel_data_lib"
+# sdist-directory = "python_package"
+# manifest-path = "../server/fennel_data_lib/Cargo.toml"
 
 
 # inspired from - https://github.com/pypa/pip/blob/main/pyproject.toml
