--- a/docs/api.yml
+++ b/docs/api.yml
@@ -88,36 +88,44 @@ sidebar:
     pages:
       - "api-reference/expressions/binary"
       - "api-reference/expressions/col"
+      - "api-reference/expressions/datetime"
       - "api-reference/expressions/eval"
+      - "api-reference/expressions/from_epoch"
       - "api-reference/expressions/isnull"
       - "api-reference/expressions/fillnull"
       - "api-reference/expressions/lit"
       - "api-reference/expressions/not"
       - "api-reference/expressions/typeof"
       - "api-reference/expressions/when"
-      # - "api-reference/expressions/datetime"
-      # - "api-reference/expressions/from_epoch"
 
-  # - slug: "api-reference/expressions/dt"
-  #   title: "Datetime Expressions"
-  #   pages:
-  #     - "api-reference/expressions/dt.since"
-  #     - "api-reference/expressions/dt.since_epoch"
-  #     - "api-reference/expressions/dt.year"
-  #     - "api-reference/expressions/dt.month"
-  #     - "api-reference/expressions/dt.day"
-  #     - "api-reference/expressions/dt.hour"
-  #     - "api-reference/expressions/dt.minute"
-  #     - "api-reference/expressions/dt.second"
-  #     - "api-reference/expressions/dt.strftime"
+  - slug: "api-reference/expressions/dt"
+    title: "Datetime Expressions"
+    pages:
+      - "api-reference/expressions/dt/day"
+      - "api-reference/expressions/dt/hour"
+      - "api-reference/expressions/dt/minute"
+      - "api-reference/expressions/dt/month"
+      - "api-reference/expressions/dt/second"
+      - "api-reference/expressions/dt/since"
+      - "api-reference/expressions/dt/since_epoch"
+      - "api-reference/expressions/dt/strftime"
+      - "api-reference/expressions/dt/year"
 
   - slug: "api-reference/expressions/list"
     title: "List Expressions"
     pages:
+      - "api-reference/expressions/list/all"
+      - "api-reference/expressions/list/any"
       - "api-reference/expressions/list/at"
       - "api-reference/expressions/list/contains"
+      - "api-reference/expressions/list/filter"
       - "api-reference/expressions/list/hasnull"
       - "api-reference/expressions/list/len"
+      - "api-reference/expressions/list/map"
+      - "api-reference/expressions/list/max"
+      - "api-reference/expressions/list/mean"
+      - "api-reference/expressions/list/min"
+      - "api-reference/expressions/list/sum"
 
   - slug: "api-reference/expressions/num"
     title: "Num Expressions"
