Add tests and update documentation

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -50,24 +50,31 @@ sidebar:
       - "api-reference/operators/transform"
       - "api-reference/operators/union"
 
-  - slug: "api-reference/connectors"
-    title: "Connectors"
+  - slug: "api-reference/source_connectors"
+    title: "Source Connectors"
     pages:
-      - "api-reference/connectors/avro"
-      - "api-reference/connectors/protobuf"
-      - "api-reference/connectors/bigquery"
-      - "api-reference/connectors/deltalake"
-      - "api-reference/connectors/hudi"
-      - "api-reference/connectors/kafka"
-      - "api-reference/connectors/kinesis"
-      - "api-reference/connectors/mongo"
-      - "api-reference/connectors/mysql"
-      - "api-reference/connectors/postgres"
-      - "api-reference/connectors/pubsub"
-      - "api-reference/connectors/redshift"
-      - "api-reference/connectors/s3"
-      - "api-reference/connectors/snowflake"
-      - "api-reference/connectors/webhook"
+      - "api-reference/source_connectors/avro"
+      - "api-reference/source_connectors/protobuf"
+      - "api-reference/source_connectors/bigquery"
+      - "api-reference/source_connectors/deltalake"
+      - "api-reference/source_connectors/hudi"
+      - "api-reference/source_connectors/kafka"
+      - "api-reference/source_connectors/kinesis"
+      - "api-reference/source_connectors/mongo"
+      - "api-reference/source_connectors/mysql"
+      - "api-reference/source_connectors/postgres"
+      - "api-reference/source_connectors/pubsub"
+      - "api-reference/source_connectors/redshift"
+      - "api-reference/source_connectors/s3"
+      - "api-reference/source_connectors/snowflake"
+      - "api-reference/source_connectors/webhook"
+
+  - slug: "api-reference/sink_connectors"
+    title: "Sink Connectors"
+    pages:
+      - "api-reference/sink_connectors/kafka"
+      - "api-reference/sink_connectors/s3"
+      - "api-reference/sink_connectors/snowflake"
 
   - slug: "api-reference/aggregations"
     title: "Aggregations"
