expr/str: add support for json_extract and split

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -154,9 +154,11 @@ sidebar:
       - "api-reference/expressions/str/concat"
       - "api-reference/expressions/str/contains"
       - "api-reference/expressions/str/endswith"
+      - "api-reference/expressions/str/json_extract"
       - "api-reference/expressions/str/len"
       - "api-reference/expressions/str/lower"
       - "api-reference/expressions/str/parse"
+      - "api-reference/expressions/str/split"
       - "api-reference/expressions/str/startswith"
       - "api-reference/expressions/str/strptime"
       - "api-reference/expressions/str/upper"
