--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "1.5.63"
+version = "1.5.64"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
@@ -22,6 +22,7 @@ sortedcontainers = "^2.4.0"
 typing-extensions = "^4.12.0"
 fennel-data-lib = "0.1.25"
 pyarrow = "^14.0.2"
+attrs = "^24.3.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
