--- a/docs/api.yml
+++ b/docs/api.yml
@@ -146,12 +146,18 @@ sidebar:
     title: "Num Expressions"
     pages:
       - "api-reference/expressions/num/abs"
+      - "api-reference/expressions/num/arcsin"
+      - "api-reference/expressions/num/arccos"
+      - "api-reference/expressions/num/arctan"
       - "api-reference/expressions/num/ceil"
+      - "api-reference/expressions/num/cos"
       - "api-reference/expressions/num/floor"
       - "api-reference/expressions/num/log"
       - "api-reference/expressions/num/pow"
       - "api-reference/expressions/num/round"
+      - "api-reference/expressions/num/sin"
       - "api-reference/expressions/num/sqrt"
+      - "api-reference/expressions/num/tan"
       - "api-reference/expressions/num/to_string"
 
   - slug: "api-reference/expressions/str"
