--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "fennel-ai"
+name = "fennel-ai" # Build fennel-glue-ai when building for glue 
 version = "1.5.71"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
@@ -23,25 +23,23 @@ typing-extensions = "^4.12.0"
 fennel-data-lib = "0.1.27"
 pyarrow = "^14.0.2"
 attrs = "^24.3.0"
-twine = "^6.0.1"
+# Comment this out when building fennel-glue-ai
 pycurl = "^7.45.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = ">=24.0.0"
-curlify = "2.2.1"
 mypy = "^0.981"
 pyarrow = "^14.0.2"
-vendoring = "^1.2.0"
 mypy-protobuf = "^3.4.0"
 build = "^0.9.0"
 geopy = "^2.3.0"
-jupyterlab = "^4.0.10"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 pyspelling = "^2.8.2"
 # A pyyaml bug when using cython, https://github.com/yaml/pyyaml/issues/601
 pyyaml = "^6.0.1"
+requests = "2.28.2"
 
 # For production, we use poetry to build the python package
 
